--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
+prompt = "^0.4.1"
+prettytable = "^3.17.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.15.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -19,3 +24,13 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 project = "src.primitive_db.main:main"
+database = "src.primitive_db.main:main"
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+exclude = ["venv", ".venv", "dist", "__pycache__"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
